mercury/namespaces/downloads/networkpolicies/allow-arr-to-deluge.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-arr-to-deluge
spec:
  podSelector:
    matchLabels:
      app-group: arr
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: deluge
  policyTypes:
    - Egress
