mercury/namespaces/downloads/networkpolicies/allow-ingresscontroller-to-arr.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingresscontroller-to-arr
spec:
  podSelector:
    matchLabels:
      app-group: arr
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
    - from:
        - namespaceSelector:
            matchLabels:
              policy-group.network.openshift.io/host-network: ""
  policyTypes:
    - Ingress
