mercury/namespaces/downloads/networkpolicies/allow-ingresscontroller-to-firefox.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingresscontroller-to-firefox
spec:
  podSelector:
    matchLabels:
      app: firefox
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
  policyTypes:
    - Ingress

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-firefox-to-ingresscontroller
spec:
  podSelector:
    matchLabels:
      app: firefox
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
  policyTypes:
    - Egress
