mercury/namespaces/downloads/networkpolicies/allow-media-servers-to-arr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-media-servers-to-arr
  namespace: downloads
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: media-servers
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: media-servers
  podSelector:
    matchLabels:
      app-group: arr
  policyTypes:
  - Ingress
  - Egress
